--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
+    "crypto": "0.0.3",
     "dateformat": "^2.0.0",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
@@ -33,6 +34,7 @@
     "htmlparser2": "^3.9.2",
     "http": "0.0.0",
     "https": "^1.0.0",
+    "multer": "^1.3.0",
     "mysql": "^2.13.0",
     "util": "^0.10.3"
   }
